Fixed header z-index

--- a/client/css/common/zindex.import.styl
+++ b/client/css/common/zindex.import.styl
@@ -1,5 +1,5 @@
 .g-header-wrap
-  z-index: 10
+  z-index: 100
 
 .g-header-logo
 .g-header-hamburger
